--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-vue-admin",
+  "name": "bobo",
   "version": "3.0.0",
   "author": "Pan <panfree23@gmail.com>",
   "description": "An electron-vue project",
@@ -19,7 +19,7 @@
     "postinstall": "npm run lint:fix"
   },
   "build": {
-    "productName": "electron-vue-admin",
+    "productName": "bobo",
     "appId": "org.simulatedgreg.electron-vue",
     "directories": {
       "output": "build"
@@ -57,6 +57,7 @@
     "cheerio": "^1.0.0-rc.3",
     "element-ui": "2.3.4",
     "js-cookie": "^2.2.0",
+    "jsqr": "^1.3.1",
     "jszip": "^3.5.0",
     "mongodb": "^3.6.3",
     "normalize.css": "7.0.0",
